Bug 1615811 - Invalidate old display items if overflow changes on an element that can display ellipsis. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D63327